CSS background navbar

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
       <script type="text/javascript" src="js/materialize.min.js"></script>
         
         <!--Navbar Start"-->
-       <nav>
+    <nav class="nav">
     <div class="nav-wrapper container">
       <a href="#" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+        <li><a href="sass.html">About</a></li>
+        <li><a href="badges.html">Services</a></li>
+        <li><a href="collapsible.html">Book</a></li>
+        <li><a href="collapsible.html">FAQ</a></li>
+        <li><a href="collapsible.html">Contact</a></li>
       </ul>
     </div>
   </nav>
