--- a/about.html
+++ b/about.html
@@ -69,7 +69,15 @@
      <div class="row container">
       <h2 class="header">Taxi</h2>
       <p class="grey-text text-darken-3 lighten-3">Paying for your taxi fare has also been made simpler as the card can effectivly pay for the fare without the worry of not having enough money as it can already be paid with the card.</p>
-    </div>    
-      
+    </div>  
+        
+        <footer class="page-footer">
+          <div class="footer-copyright">
+            <div class="container">
+            © 2014 Copyright Benjamin Gittus
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
     </body>
   </html>
