--- a/about.html
+++ b/about.html
@@ -17,17 +17,26 @@
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
       <script> $(document).ready(function(){$('.parallax').parallax();});</script>
+      <script>$( document ).ready(function(){$(".button-collapse").sideNav();})</script>
         
         <!--Navbar Start"-->
     <nav class="nav">
     <div class="nav-wrapper container">
       <a href="#" class="brand-logo"><img src ="assets/SwypeCard%201.jpg"></a>
+    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">About</a></li>
-        <li><a href="badges.html">Services</a></li>
-        <li><a href="collapsible.html">Book</a></li>
-        <li><a href="collapsible.html">FAQ</a></li>
-        <li><a href="collapsible.html">Contact</a></li>
+            <li><a href="sass.html">About</a></li>
+            <li><a href="badges.html">Services</a></li>
+            <li><a href="collapsible.html">Book</a></li>
+            <li><a href="collapsible.html">FAQ</a></li>
+            <li><a href="collapsible.html">Contact</a></li>
+      </ul>
+         <ul class="side-nav" id="mobile-demo">
+             <li><a href="sass.html">About</a></li>
+             <li><a href="badges.html">Services</a></li>
+             <li><a href="collapsible.html">Book</a></li>
+            <li><a href="mobile.html">FAQ</a></li>
+             <li><a href="collapsible.html">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -50,7 +59,7 @@
       <p class="grey-text text-darken-3 lighten-3">Swype card is a company dedicated to making life for its customers as easy as possible and our product promotes this to the greatest extent as it will continue to improve and create a smoother experience Swype card works by using a sperate account that you put money into so that you can use it to easily use public transport.</p>
     </div>  
      <div class="parallax-container">
-    <div class="parallax"><img src="assets/buspic4.jpeg"></div>
+        <div class="parallax"><img src="assets/buspic4.jpeg"></div>
   </div>
   <div class="row container">
       <h2 class="header">Buses</h2>
@@ -60,15 +69,15 @@
     <div class="parallax"><img src="assets/trainpic3.jpeg"></div>
     </div>   
      <div class="row container">
-      <h2 class="header">Trains</h2>
-      <p class="grey-text text-darken-3 lighten-3">Boarding trains has been made easier with swype card as it can be used as a card to get you through the gate and onto your journey without the hassle of struggling to get a ticket.</p>
+        <h2 class="header">Trains</h2>
+         <p class="grey-text text-darken-3 lighten-3">Boarding trains has been made easier with swype card as it can be used as a card to get you through the gate and onto your journey without the hassle of struggling to get a ticket.</p>
     </div>
-    <div class="parallax-container">
-    <div class="parallax"><img src="assets/taxipic1.jpeg"></div>
+        <div class="parallax-container">
+        <div class="parallax"><img src="assets/taxipic1.jpeg"></div>
     </div>
      <div class="row container">
-      <h2 class="header">Taxi</h2>
-      <p class="grey-text text-darken-3 lighten-3">Paying for your taxi fare has also been made simpler as the card can effectivly pay for the fare without the worry of not having enough money as it can already be paid with the card.</p>
+        <h2 class="header">Taxi</h2>
+            <p class="grey-text text-darken-3 lighten-3">Paying for your taxi fare has also been made simpler as the card can effectivly pay for the fare without the worry of not having enough money as it can already be paid with the card.</p>
     </div>  
         
         <footer class="page-footer">
