--- a/about.html
+++ b/about.html
@@ -20,21 +20,29 @@
       <script>$( document ).ready(function(){$(".button-collapse").sideNav();})</script>
         
         <!--Navbar Start"-->
+    <ul id="dropdown1" class="dropdown-content">
+        <li><a href="#!">Buses</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">Trains</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">Taxi</a></li>
+    </ul>
     <nav class="nav">
     <div class="nav-wrapper container">
       <a href="#" class="brand-logo"><img src ="assets/SwypeCard%201.jpg"></a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="sass.html">About</a></li>
-            <li><a href="badges.html">Services</a></li>
+            <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services <i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="collapsible.html">Book</a></li>
             <li><a href="collapsible.html">FAQ</a></li>
             <li><a href="collapsible.html">Contact</a></li>
       </ul>
          <ul class="side-nav" id="mobile-demo">
              <li><a href="sass.html">About</a></li>
-             <li><a href="badges.html">Services</a></li>
+              <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services <i class="material-icons right">arrow_drop_down</i></a></li>
              <li><a href="collapsible.html">Book</a></li>
+             
             <li><a href="mobile.html">FAQ</a></li>
              <li><a href="collapsible.html">Contact</a></li>
       </ul>
