--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       <script type="text/javascript" src="js/materialize.min.js"></script>
       <script> $(document).ready(function(){$('.parallax').parallax();});</script>
       <script>$( document ).ready(function(){$(".button-collapse").sideNav();})</script>
-        
+      <script>$( document ).ready(function)(){$(".dropdown-button").dropdown();})</script>
         <!--Navbar Start"-->
     <ul id="dropdown1" class="dropdown-content">
         <li><a href="#!">Buses</a></li>
@@ -40,9 +40,8 @@
       </ul>
          <ul class="side-nav" id="mobile-demo">
              <li><a href="sass.html">About</a></li>
-              <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services <i class="material-icons right">arrow_drop_down</i></a></li>
+
              <li><a href="collapsible.html">Book</a></li>
-             
             <li><a href="mobile.html">FAQ</a></li>
              <li><a href="collapsible.html">Contact</a></li>
       </ul>
