Booking page and logo changes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
        <footer class="page-footer">
           <div class="footer-copyright">
             <div class="container">
-            © 2014 Copyright Benjamin Gittus
+            © Copyright Benjamin Gittus
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
           </div>
