--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
         <footer class="page-footer">
           <div class="footer-copyright">
             <div class="container">
-            © 2014 Copyright Benjamin Gittus
+            © Copyright Benjamin Gittus
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
           </div>
