--- a/booking.html
+++ b/booking.html
@@ -53,7 +53,6 @@
            <div class="container">
  
        <img class="responsive-img" src="http://via.placeholder.com/1920x500">
-           
           
     <form class="col s12">
       <div class="row">
@@ -93,7 +92,7 @@
        <footer class="page-footer">
           <div class="footer-copyright">
             <div class="container">
-            © 2014 Copyright Benjamin Gittus
+            © Copyright Benjamin Gittus
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
           </div>
