--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       
       <!--My Style Sheet-->
       <link href="css/myStyleSheet.css" type="text/css" rel="stylesheet"/>
+      <link type="text/css" rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css"/>
     </head>
 
     <body>
@@ -91,6 +92,8 @@
             <div class="container">
             © Copyright Benjamin Gittus
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            <!--<a href="#" class="fa fa-facebook"></a>               
+            <a href="#" class="fa fa-twitter"></a>-->
             </div>
           </div>
         </footer>
