--- a/about.html
+++ b/about.html
@@ -21,30 +21,35 @@
       <script>$( document ).ready(function(){$(".button-collapse").sideNav();})</script>
       <script>$( document ).ready(function)(){$(".dropdown-button").dropdown();})</script>
         <!--Navbar Start"-->
-    <ul id="dropdown1" class="dropdown-content">
-        <li><a href="#!">Buses</a></li>
+   <ul id="dropdown1" class="dropdown-content">
+        <li><a href="bus_services.html">Buses</a></li>
         <li class="divider"></li>
-        <li><a href="#!">Trains</a></li>
+        <li><a href="train_services.html">Trains</a></li>
         <li class="divider"></li>
-        <li><a href="#!">Taxi</a></li>
+        <li><a href="taxi_services.html">Taxi</a></li>
+    </ul>
+    <ul id="dropdown2" class="dropdown-content">
+        <li><a href="bus_services.html">Buses</a></li>
+        <li class="divider"></li>
+        <li><a href="train_services.html">Trains</a></li>
+        <li class="divider"></li>
+        <li><a href="taxi_services.html">Taxi</a></li>
     </ul>
     <nav class="nav">
     <div class="nav-wrapper container">
-      <a href="#" class="brand-logo"><img src ="assets/SwypeCard%201.jpg"></a>
+      <a href="index.html" class="brand-logo"><img src ="assets/SwypeCard%201.jpg"></a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services <i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a href="collapsible.html">Book</a></li>
-            <li><a href="collapsible.html">FAQ</a></li>
-            <li><a href="collapsible.html">Contact</a></li>
+            <li><a href="booking.html">Book</a></li>
+            <li><a href="faq.html">FAQ</a></li>
       </ul>
          <ul class="side-nav" id="mobile-demo">
-             <li><a href="sass.html">About</a></li>
-
-             <li><a href="collapsible.html">Book</a></li>
-            <li><a href="mobile.html">FAQ</a></li>
-             <li><a href="collapsible.html">Contact</a></li>
+             <li><a href="about.html">About</a></li>
+             <li><a class = "dropdown-button" href="#" data-activates="dropdown2">Services <i class="material-icons right">arrow_drop_down</i></a></li>
+             <li><a href="booking.html">Book</a></li>
+             <li><a href="faq.html">FAQ</a></li>
       </ul>
     </div>
   </nav>
