--- a/booking.html
+++ b/booking.html
@@ -63,7 +63,7 @@
            <div class="col s12 m12 l12">
             <div class="card">
                <div class="card-content white-text">
-                   <h5>Fill in the information below to apply for your card. The details below are used on the card and to contact you in the future</h5>
+                   <h5>Fill in the information below to apply for your card. The details will be used on the card and to contact you</h5>
                </div>
             </div>
          </div>
