--- a/faq.html
+++ b/faq.html
@@ -62,44 +62,44 @@
         
           <ul class="collapsible" data-collapsible="accordion">
     <li>
-      <div class="collapsible-header">First</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-header">What do you do if you lose or break the card?</div>
+      <div class="collapsible-body"><span>If your swype card breaks you can contact us to get a free replacement.</span></div>
     </li>
     <li>
-      <div class="collapsible-header">Second</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-header">How do you update the balance on your card online.</div>
+      <div class="collapsible-body"><span>You can update your balance through online banking like paypal.</span></div>
     </li>
     <li>
-      <div class="collapsible-header">Third</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-header">Does the card work with every bus services</div>
+      <div class="collapsible-body"><span>Bus services that are registered with swypecard are the only services that can use the card.</span></div>
     </li>
      <li>
-      <div class="collapsible-header">Third</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-header">what are the dimensions of the card </div>
+      <div class="collapsible-body"><span>2 inches height and 3 inches width.</span></div>
     </li>
       <li>
-      <div class="collapsible-header">Third</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-header">Where does this card work?</div>
+      <div class="collapsible-body"><span>This card only works in the United Kingdom.</span></div>
     </li>
     <li>
-      <div class="collapsible-header">Third</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-header">How do I disable my account?</div>
+      <div class="collapsible-body"><span>You can contact us on our social.</span></div>
     </li>
          <li>
-      <div class="collapsible-header">Third</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-header">Can you apply for the card if you are a EU resident lving in the UK</div>
+      <div class="collapsible-body"><span>Yes you can.</span></div>
     </li>
     <li>
-      <div class="collapsible-header">Third</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-header">How long does it take for the card to arrive?</div>
+      <div class="collapsible-body"><span>It can take up to 6 working days.</span></div>
     </li>
     <li>
-      <div class="collapsible-header">Third</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-header">How much does it cost for a replacement</div>
+      <div class="collapsible-body"><span>The first replacement will be free but continuing replacements will have a £5.00 fee.</span></div>
     </li>
     <li>
-      <div class="collapsible-header">Third</div>
-      <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+      <div class="collapsible-header">Can phones be used as the card?</div>
+      <div class="collapsible-body"><span>They cannot at the moment but it may be implemented in the future.</span></div>
     </li>
      </ul>
                
