--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <li><a href="taxi_services.html">Taxi</a></li>
     </ul>
     <ul id="dropdown2" class="dropdown-content">
-        <li><a href="bus_services.html">Buses</a></li>
+        <li><a href="bus_services.html">Bus</a></li>
         <li class="divider"></li>
         <li><a href="train_services.html">Trains</a></li>
         <li class="divider"></li>
