--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <script>$( document ).ready(function)(){$(".dropdown-button").dropdown();})</script>
         <!--Navbar Start"-->
    <ul id="dropdown1" class="dropdown-content">
-        <li><a href="bus_services.html">Buses</a></li>
+        <li><a href="bus_services.html">Bus</a></li>
         <li class="divider"></li>
         <li><a href="train_services.html">Trains</a></li>
         <li class="divider"></li>
