--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
   </div>
   <div class="row container">
       <h2 class="header">Buses</h2>
-      <p class="grey-text text-darken-3 lighten-3">Buses services are improved with swype card making boarding and paying for the journey easier and less tedious with a use of the card you can easily pay for your fare and get to where you need to be with no problem.</p>
+      <p class="grey-text text-darken-3 lighten-3">Bus services are improved with swype card making boarding and paying for the journey easier and less tedious with a use of the card you can easily pay for your fare and get to where you need to be with no problem.</p>
     </div> 
     <div class="parallax-container">
     <div class="parallax"><img src="assets/trainpic3.jpeg"></div>
