--- a/about.html
+++ b/about.html
@@ -56,12 +56,12 @@
         <!--Navbar End-->
     
         <div class="parallax-container">
-    <div class="parallax"><img src="http://via.placeholder.com/1920x1080"></div>
+    <div class="parallax"><img src="assets/HomePicture2.jpg"></div>
   </div>
   <div class="section white">
     <div class="row container">
       <h2 class="parallaxheader">About Us</h2>
-      <p class="grey-text text-darken-3 lighten-3">Swype Card is a product that specialises in making public transport easier and improving experiences in a variety of different transportation options with the ease of one card that allows you to access any of our services. Below is a small description on our company and how product could affect you.</p>
+      <p class="grey-text text-darken-3 lighten-3">Swype Card is a product that specialises in making public transport easier and improving experiences in a variety of different transportation options with the ease of one card that allows you to access any of our services with a system that allows you to prepay for as many journeys as you feel necessary. Below is a small description on our company and how the product could affect you.</p>
     </div>
   </div>
   <div class="parallax-container">
@@ -69,7 +69,7 @@
   </div>
   <div class="row container">
       <h2 class="header">The Company and the Product</h2>
-      <p class="grey-text text-darken-3 lighten-3">Swype card is a company dedicated to making life for its customers as easy as possible and our product promotes this to the greatest extent as it will continue to improve and create a smoother experience Swype card works by using a sperate account that you put money into so that you can use it to easily use public transport.</p>
+      <p class="grey-text text-darken-3 lighten-3">Swype card is a company dedicated to making life for its customers as easy as possible and our product promotes this to the greatest extent as it will continue to improve and create a smoother experience Swype card works by using a seperate account that you put money into so that you can use it to easily use public transport.</p>
     </div>  
      <div class="parallax-container">
         <div class="parallax"><img src="assets/buspic4.jpeg"></div>
