--- a/bus_services.html
+++ b/bus_services.html
@@ -77,7 +77,7 @@
     <div class="parallax"><img src="assets/buspic7.jpeg"></div>
     </div>   
      <div class="row container">
-         <p class="grey-text text-darken-3 lighten-3">Boarding trains has been made easier with swype card as it can be used as a card to get you through the gate and onto your journey without the hassle of struggling to get a ticket.</p>
+         <p class="grey-text text-darken-3 lighten-3">Swypecard is working with many bus companies around the U.K so there is many methods to get around using the card and many places that you can get to using the service that is provided with the companies we work with.</p>
     </div>
       
         
