--- a/index.html
+++ b/index.html
@@ -93,13 +93,20 @@
   </div>   
     </div>
         
-       <footer class="page-footer">
+        <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l12 s12">
+                <h5 class="white-text">Contact Us</h5>
+                <p class="grey-text text-lighten-4">Phone Number: 0300 456 2424</p>
+                <a href="https://en-gb.facebook.com/" class="fa fa-facebook"></a>
+                <a href="https://twitter.com/" class="fa fa-twitter"></a>
+              </div>
+            </div>
+          </div>
           <div class="footer-copyright">
             <div class="container">
-            © Copyright Benjamin Gittus
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-            <!--<a href="#" class="fa fa-facebook"></a>               
-            <a href="#" class="fa fa-twitter"></a>-->
+            © 2017 SwypeCard - Benjamin Gittus
             </div>
           </div>
         </footer>
