--- a/taxi_services.html
+++ b/taxi_services.html
@@ -77,7 +77,7 @@
     <div class="parallax"><img src="assets/taxipic4.jpeg"></div>
     </div>   
      <div class="row container">
-         <p class="grey-text text-darken-3 lighten-3">Some taxi companies do not work with us and therefore will not use the swypecard machine .</p>
+         <p class="grey-text text-darken-3 lighten-3">Some taxi companies do not work with us and therefore will not use the swypecard machine therefore before you start the jorney make sure you can pay to aviod any trouble.</p>
     </div>
 
    
