--- a/train_services.html
+++ b/train_services.html
@@ -65,26 +65,35 @@
     <div class="parallax"><img src="assets/trainpic6.jpeg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">To pay for a train journey you will need to get a ticket by using your card on the scanner that will allow you to buy a ticket for the train which you can use to leave and re enter the station and used to board the train itself.</p>
+      <p class="grey-text text-darken-3 lighten-3">To pay for a train journey you will need to get a ticket by using your card on the scanner that will allow you to buy a ticket for the train which you can use to leave and re enter the station and used to board the train itself. The swypecard will act as your way to get a ticket in any situation where you want to journey on a train and using it means </p>
     </div>  
      <div class="parallax-container">
         <div class="parallax"><img src="assets/trainpic4.jpg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">The price for the tickets vary on the length of the journey and how many trains it will take howver the money will be pre paid for when you use the card to buy the tickets .</p>
+      <p class="grey-text text-darken-3 lighten-3">The price for the tickets vary on the length of the journey and how many trains it will take howver the money will be pre paid for when you use the card to buy the tickets this means that you can easily.</p>
     </div> 
     <div class="parallax-container">
     <div class="parallax"><img src="assets/trainpic5.jpeg"></div>
     </div>   
      <div class="row container">
-         <p class="grey-text text-darken-3 lighten-3">Boarding trains has been made easier with swype card as it can be used as a card to get you through the gate and onto your journey without the hassle of struggling to get a ticket.</p>
+         <p class="grey-text text-darken-3 lighten-3">You will need to keep swypecard with you after you have brought your ticket aswell this is important if you plan to take any other train journeys as you can pay for the ticket you need with the card when you decide.</p>
     </div>
     
         <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l12 s12">
+                <h5 class="white-text">Contact Us</h5>
+                <p class="grey-text text-lighten-4">Phone Number: 0300 456 2424</p>
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+              </div>
+            </div>
+          </div>
           <div class="footer-copyright">
             <div class="container">
-            © Copyright Benjamin Gittus
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            © 2017 SwypeCard - Benjamin Gittus
             </div>
           </div>
         </footer>
