--- a/faq.html
+++ b/faq.html
@@ -86,7 +86,7 @@
       <div class="collapsible-body"><span>You can contact us on our social media account and we can help you prepare in disabling your account.</span></div>
     </li>
          <li>
-      <div class="collapsible-header">Can you apply for the card if you are a EU resident lving in the UK</div>
+      <div class="collapsible-header">Can you apply for the card if you are an EU resident living in the UK</div>
       <div class="collapsible-body"><span>Yes you can.</span></div>
     </li>
     <li>
