--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="row">
               <div class="col l12 s12">
                 <h5 class="white-text">Contact Us</h5>
-                <p class="grey-text text-lighten-4">Phone Number: 0300 456 2424</p>
+                <p class="grey-text text-lighten-4">Tel: 0300 456 2424</p>
                 <a href="https://en-gb.facebook.com/" class="fa fa-facebook"></a>
                 <a href="https://twitter.com/" class="fa fa-twitter"></a>
               </div>
