--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
   <div class="section white">
     <div class="row container">
       <h2 class="parallaxheader">About Us</h2>
-      <p class="grey-text text-darken-3 lighten-3">Swype Card is a product that specialises in making public transport easier and improving experiences in a variety of different transportation options with the ease of one card that allows you to access any of our services with a system that allows you to prepay for as many journeys as you feel necessary. Below is a small description on our company and how the product could affect you.</p>
+      <p class="grey-text text-darken-3 lighten-3">Swype card is a company dedicated to making life for its customers as easy as possible. Our product promotes this to the greatest extent as it will continue to improve and create a smoother experience. Swype card works by using a seperate account that you put money into so that you can use it to easily use public transport.</p>
     </div>
   </div>
   <div class="parallax-container">
@@ -76,21 +76,21 @@
   </div>
   <div class="row container">
       <h2 class="header">Buses</h2>
-      <p class="grey-text text-darken-3 lighten-3">Bus services are improved with swype card making boarding and paying for the journey easier and less tedious with a use of the card you can easily pay for your fare and get to where you need to be with no problem.</p>
+      <p class="grey-text text-darken-3 lighten-3">Bus services are improved with swype card, making boarding and paying for the journey easier and less tedious. With a use of the card you can easily pay for your fare and get to where you need to be with no problem.</p>
     </div> 
     <div class="parallax-container">
     <div class="parallax"><img src="assets/trainpic3.jpeg"></div>
     </div>   
      <div class="row container">
         <h2 class="header">Trains</h2>
-         <p class="grey-text text-darken-3 lighten-3">Boarding trains has been made easier with swype card as it can be used as a card to get you through the gate and onto your journey without the hassle of struggling to get a ticket.</p>
+         <p class="grey-text text-darken-3 lighten-3">Boarding trains has been made easier with swype card, as it can be used as a card to get you through the gate and onto your journey without the hassle of struggling to get a ticket.</p>
     </div>
         <div class="parallax-container">
         <div class="parallax"><img src="assets/taxipic1.jpeg"></div>
     </div>
      <div class="row container">
         <h2 class="header">Taxi</h2>
-            <p class="grey-text text-darken-3 lighten-3">Paying for your taxi fare has also been made simpler as the card can effectivly pay for the fare without the worry of not having enough money as it can already be paid with the card.</p>
+            <p class="grey-text text-darken-3 lighten-3">Paying for your taxi fare has also been made simpler as the card can effectively pay for the fare without the worry of not having enough money as it can already be paid with the card.</p>
     </div>  
         
         <footer class="page-footer">
