--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     </div>
     <div class="container">
     <div class="carousel">
-    <a class="carousel-item" href="#one!"><img src="assets/trainpic1.jpeg"></a>
-    <a class="carousel-item" href="#two!"><img src="assets/buspic1.jpeg"></a>
+    <a class="carousel-item" href="#one!"><img src="assets/Swypecard%20Product.jpg"></a>
+    <a class="carousel-item" href="#two!"><img src="assets/Swypecard%20Product%20back.jpg"></a>
     <a class="carousel-item" href="#three!"><img src="assets/trainpic2.jpeg"></a>
     <a class="carousel-item" href="#three!"><img src="assets/buspic2.jpg"></a>
     <a class="carousel-item" href="#three!"><img src="assets/buspic3.jpeg"></a>
