--- a/taxi_services.html
+++ b/taxi_services.html
@@ -65,7 +65,7 @@
     <div class="parallax"><img src="assets/taxipic2.jpeg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">To pay for a taxi you will need to book from a taxi company that works with us and give your location and destination and the comapny will send the nearest taxi to you this is reliant on the taxi company and does not include.</p>
+      <p class="grey-text text-darken-3 lighten-3">To pay for a taxi you will need to book from a taxi company that works with us and give your location and destination and the company will send the nearest taxi to you this is reliant on the taxi company and does not incorporate us unti you pay for your service.</p>
     </div>  
      <div class="parallax-container">
         <div class="parallax"><img src="assets/taxipic3.jpeg"></div>
@@ -77,7 +77,7 @@
     <div class="parallax"><img src="assets/taxipic4.jpeg"></div>
     </div>   
      <div class="row container">
-         <p class="grey-text text-darken-3 lighten-3">Some taxi companies do not work with us and therefore will not use the swypecard machine therefore before you start the jorney make sure you can pay to aviod any trouble.</p>
+         <p class="grey-text text-darken-3 lighten-3">Some taxi companies do not work with us and therefore will not use the swypecard machine therefore before you start the jorney make sure you can pay to avoid any trouble.</p>
     </div>
 
    
