--- a/train_services.html
+++ b/train_services.html
@@ -58,7 +58,7 @@
   <div class="section white">
     <div class="row container">
       <h2 class="parallaxheader">Train Services</h2>
-      <p class="grey-text text-darken-3 lighten-3">Below will be an indepth description on how the train services work and what you will have to do to use the card correcly when you wish to travel from train stations</p>
+      <p class="grey-text text-darken-3 lighten-3">Below will be an indepth description on how the train services work and what you will have to do to use the card correctly when you wish to travel from train stations</p>
     </div>
   </div>
   <div class="parallax-container">
@@ -71,7 +71,7 @@
         <div class="parallax"><img src="assets/trainpic4.jpg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">The price for the tickets vary on the length of the journey and how many trains it will take howver the money will be pre paid for when you use the card to buy the tickets this means that you can easily.</p>
+      <p class="grey-text text-darken-3 lighten-3">The price for the tickets vary on the length of the journey and how many trains it will take however the money will be pre paid for when you use the card to buy the tickets this means that you can easily.</p>
     </div> 
     <div class="parallax-container">
     <div class="parallax"><img src="assets/trainpic5.jpeg"></div>
