--- a/booking.html
+++ b/booking.html
@@ -85,7 +85,7 @@
       <div class="row">
         <div class="input-field col s12">
           <input id="age" type="number" class="validate">
-          <label for="password">Age</label>
+          <label for="password">Date of Birth</label>
         </div>
       </div>
       <div class="row">
@@ -101,7 +101,12 @@
         </div>
       </div>
     </form>
+    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right">send</i>
+  </button>
   </div>
+        
+    <br>
         
        <footer class="page-footer">
           <div class="footer-copyright">
