--- a/bus_services.html
+++ b/bus_services.html
@@ -58,7 +58,7 @@
   <div class="section white">
     <div class="row container">
       <h2 class="parallaxheader">Bus Services</h2>
-      <p class="grey-text text-darken-3 lighten-3">Below will be an indepth description on how the bus services work and what you will have to do to use the card correcly when you wish to travel on buses.</p>
+      <p class="grey-text text-darken-3 lighten-3">Below will be an indepth description on how the bus services work and what you will have to do to use the card correctly when you wish to travel on buses.</p>
     </div>
   </div>
   <div class="parallax-container">
@@ -71,7 +71,7 @@
         <div class="parallax"><img src="assets/buspic6.jpeg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">Journeys that may require multple buses will work the same way and you will have to use the card for both journeys and it will count as two payments as you will be using different buses.</p>
+      <p class="grey-text text-darken-3 lighten-3">Journeys that may require multiple buses will work the same way and you will have to use the card for both journeys and it will count as two payments as you will be using different buses.</p>
     </div> 
     <div class="parallax-container">
     <div class="parallax"><img src="assets/buspic7.jpeg"></div>
