--- a/booking.html
+++ b/booking.html
@@ -37,7 +37,7 @@
     </ul>
     <nav class="nav">
     <div class="nav-wrapper container">
-      <a href="index.html" class="brand-logo"><img src ="assets/SwypeCard%201.jpg"></a>
+      <a href="index.html" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="about.html">About</a></li>
@@ -101,18 +101,31 @@
         </div>
       </div>
     </form>
+     <div class="button">   
     <button class="btn waves-effect waves-light" type="submit" name="action">Submit
     <i class="material-icons right">send</i>
   </button>
+        </div>
   </div>
         
     <br>
         
-       <footer class="page-footer">
+        <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l12 s12">
+                <h5 class="white-text">Contact Us</h5>
+                <p class="grey-text text-lighten-4">Tel: 0300 456 2424</p>
+                 <p class="grey-text text-lighten-4">Email: SwypeCard@gmail.com</p>
+                  <p class="grey-text text-lighten-4">Address: The Friary, Lichfield WS13 6QG</p>
+                <a href="https://en-gb.facebook.com/" class="fa fa-facebook"></a>
+                <a href="https://twitter.com/" class="fa fa-twitter"></a>
+              </div>
+            </div>
+          </div>
           <div class="footer-copyright">
             <div class="container">
-            © Copyright Benjamin Gittus
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            © 2017 SwypeCard - Benjamin Gittus
             </div>
           </div>
         </footer>
