--- a/taxi_services.html
+++ b/taxi_services.html
@@ -37,7 +37,7 @@
     </ul>
     <nav class="nav">
     <div class="nav-wrapper container">
-      <a href="index.html" class="brand-logo"><img src ="assets/SwypeCard%201.jpg"></a>
+      <a href="index.html" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="about.html">About</a></li>
@@ -65,13 +65,13 @@
     <div class="parallax"><img src="assets/taxipic2.jpeg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">To pay for a taxi you will need to book from a taxi company that works with us and give your location and destination and the company will send the nearest taxi to you this is reliant on the taxi company and does not incorporate us unti you pay for your service.</p>
+      <p class="grey-text text-darken-3 lighten-3">To pay for a taxi you will need to book from a taxi company and give your location and destination to them. The company will send the nearest taxi to you however this is reliant on the taxi company and does not incorporate us unti you pay for your service.</p>
     </div>  
      <div class="parallax-container">
         <div class="parallax"><img src="assets/taxipic3.jpeg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">When the taxi arrives and takes you to your location you will be charged based on how far the car has driven you will pay by swiping the card in the scanner that is in the taxi this will pay your fare at the end of your journey without the need for change making your payment smoother.</p>
+      <p class="grey-text text-darken-3 lighten-3">When the taxi arrives and takes you to your location you will be charged based on how far the car has driven you will pay by swiping the card in the scanner that is in the taxi, this will pay your fare at the end of your journey without the need for change making your payment smoother and allowing for a better experience with this mode of transportation.</p>
     </div> 
     <div class="parallax-container">
     <div class="parallax"><img src="assets/taxipic4.jpeg"></div>
@@ -83,10 +83,21 @@
    
         
         <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l12 s12">
+                <h5 class="white-text">Contact Us</h5>
+                <p class="grey-text text-lighten-4">Tel: 0300 456 2424</p>
+                 <p class="grey-text text-lighten-4">Email: SwypeCard@gmail.com</p>
+                  <p class="grey-text text-lighten-4">Address: The Friary, Lichfield WS13 6QG</p>
+                <a href="https://en-gb.facebook.com/" class="fa fa-facebook"></a>
+                <a href="https://twitter.com/" class="fa fa-twitter"></a>
+              </div>
+            </div>
+          </div>
           <div class="footer-copyright">
             <div class="container">
-            © Copyright Benjamin Gittus
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            © 2017 SwypeCard - Benjamin Gittus
             </div>
           </div>
         </footer>
