--- a/bus_services.html
+++ b/bus_services.html
@@ -37,7 +37,7 @@
     </ul>
     <nav class="nav">
     <div class="nav-wrapper container">
-      <a href="index.html" class="brand-logo"><img src ="assets/SwypeCard%201.jpg"></a>
+      <a href="index.html" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="about.html">About</a></li>
@@ -65,7 +65,7 @@
     <div class="parallax"><img src="assets/buspic5.jpeg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">Buses with our company will be fitted with a card scanner that allows you to easily swipe your card over it to pay for your journey. Since the money is prepaid there is nothing else you have to do other than enjoy your journey as the system will have recognised that you have .</p>
+      <p class="grey-text text-darken-3 lighten-3">Buses with our company will be fitted with a card scanner that allows you to easily swipe your card over it to pay for your journey. Since the money is prepaid there is nothing else you have to do other than enjoy your journey as the system will have recognised that you have paid successfully notifying the bus driver.</p>
     </div>  
      <div class="parallax-container">
         <div class="parallax"><img src="assets/buspic6.jpeg"></div>
@@ -82,10 +82,21 @@
       
         
         <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l12 s12">
+                <h5 class="white-text">Contact Us</h5>
+                <p class="grey-text text-lighten-4">Tel: 0300 456 2424</p>
+                 <p class="grey-text text-lighten-4">Email: SwypeCard@gmail.com</p>
+                  <p class="grey-text text-lighten-4">Address: The Friary, Lichfield WS13 6QG</p>
+                <a href="https://en-gb.facebook.com/" class="fa fa-facebook"></a>
+                <a href="https://twitter.com/" class="fa fa-twitter"></a>
+              </div>
+            </div>
+          </div>
           <div class="footer-copyright">
             <div class="container">
-            © Copyright Benjamin Gittus
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            © 2017 SwypeCard - Benjamin Gittus
             </div>
           </div>
         </footer>
