--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </ul>
     <nav class="nav">
     <div class="nav-wrapper container">
-      <a href="index.html" class="brand-logo"><img src ="assets/SwypeCard%201.jpg"></a>
+      <a href="index.html" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="about.html">About</a></li>
@@ -99,6 +99,8 @@
               <div class="col l12 s12">
                 <h5 class="white-text">Contact Us</h5>
                 <p class="grey-text text-lighten-4">Tel: 0300 456 2424</p>
+                 <p class="grey-text text-lighten-4">Email: SwypeCard@gmail.com</p>
+                  <p class="grey-text text-lighten-4">Address: The Friary, Lichfield WS13 6QG</p>
                 <a href="https://en-gb.facebook.com/" class="fa fa-facebook"></a>
                 <a href="https://twitter.com/" class="fa fa-twitter"></a>
               </div>
