--- a/train_services.html
+++ b/train_services.html
@@ -37,7 +37,7 @@
     </ul>
     <nav class="nav">
     <div class="nav-wrapper container">
-      <a href="index.html" class="brand-logo"><img src ="assets/SwypeCard%201.jpg"></a>
+      <a href="index.html" class="brand-logo"><img src ="assets/SwypeCard%202.jpg"></a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="about.html">About</a></li>
@@ -65,30 +65,31 @@
     <div class="parallax"><img src="assets/trainpic6.jpeg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">To pay for a train journey you will need to get a ticket by using your card on the scanner that will allow you to buy a ticket for the train which you can use to leave and re enter the station and used to board the train itself. The swypecard will act as your way to get a ticket in any situation where you want to journey on a train and using it means </p>
+      <p class="grey-text text-darken-3 lighten-3">To pay for a train journey you will need to get a ticket by using your card on the scanner, that will allow you to buy a ticket for the train which you can use to leave and re-enter the station and use to board the train itself. The swypecard will be your secondary ticket and is an important component to making sure you safely book tickets if you use trains on a regular basis.  </p>
     </div>  
      <div class="parallax-container">
         <div class="parallax"><img src="assets/trainpic4.jpg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">The price for the tickets vary on the length of the journey and how many trains it will take however the money will be pre paid for when you use the card to buy the tickets this means that you can easily.</p>
+      <p class="grey-text text-darken-3 lighten-3">The price for the tickets vary on the length of the journey and how many trains it will take However the money will be pre paid for when you use the card to buy the tickets this means that you can easily make impromptu journeys without needing to carry money.</p>
     </div> 
     <div class="parallax-container">
     <div class="parallax"><img src="assets/trainpic5.jpeg"></div>
     </div>   
      <div class="row container">
-         <p class="grey-text text-darken-3 lighten-3">You will need to keep swypecard with you after you have brought your ticket aswell this is important if you plan to take any other train journeys as you can pay for the ticket you need with the card when you decide.</p>
+         <p class="grey-text text-darken-3 lighten-3">You will need to keep swypecard with you after you have brought your ticket aswell this is important if you plan to take any other train journeys as you can pay for any other transportaion you wish to take.</p>
     </div>
     
-        <footer class="page-footer">
+         <footer class="page-footer">
           <div class="container">
             <div class="row">
               <div class="col l12 s12">
                 <h5 class="white-text">Contact Us</h5>
-                <p class="grey-text text-lighten-4">Phone Number: 0300 456 2424</p>
-                <p class="grey-text text-lighten-4"></p> 
-                <a href="#" class="fa fa-facebook"></a>
-                <a href="#" class="fa fa-twitter"></a>
+                <p class="grey-text text-lighten-4">Tel: 0300 456 2424</p>
+                 <p class="grey-text text-lighten-4">Email: SwypeCard@gmail.com</p>
+                  <p class="grey-text text-lighten-4">Address: The Friary, Lichfield WS13 6QG</p>
+                <a href="https://en-gb.facebook.com/" class="fa fa-facebook"></a>
+                <a href="https://twitter.com/" class="fa fa-twitter"></a>
               </div>
             </div>
           </div>
