--- a/bus_services.html
+++ b/bus_services.html
@@ -71,7 +71,7 @@
         <div class="parallax"><img src="assets/buspic6.jpeg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">Journeys that may require multiple buses will work the same way and you will have to use the card for both journeys and it will count as two payments as you will be using different buses.</p>
+      <p class="grey-text text-darken-3 lighten-3">Journeys that may require multiple buses will work the same way and you will have to use the card for both journeys. This will count as two payments as you will be using different buses.</p>
     </div> 
     <div class="parallax-container">
     <div class="parallax"><img src="assets/buspic7.jpeg"></div>
