--- a/taxi_services.html
+++ b/taxi_services.html
@@ -65,7 +65,7 @@
     <div class="parallax"><img src="assets/taxipic2.jpeg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">To pay for a taxi you will need to book from a taxi company and give your location and destination to them. The company will send the nearest taxi to you however this is reliant on the taxi company and does not incorporate us unti you pay for your service.</p>
+      <p class="grey-text text-darken-3 lighten-3">To pay for a taxi you will need to book from a taxi company and give your location and destination to them. The company will send the nearest taxi to you however this is reliant on the taxi company and does not incorporate us until you pay for your service.</p>
     </div>  
      <div class="parallax-container">
         <div class="parallax"><img src="assets/taxipic3.jpeg"></div>
