--- a/train_services.html
+++ b/train_services.html
@@ -71,13 +71,13 @@
         <div class="parallax"><img src="assets/trainpic4.jpg"></div>
   </div>
   <div class="row container">
-      <p class="grey-text text-darken-3 lighten-3">The price for the tickets vary on the length of the journey and how many trains it will take However the money will be pre paid for when you use the card to buy the tickets this means that you can easily make impromptu journeys without needing to carry money.</p>
+      <p class="grey-text text-darken-3 lighten-3">The price for the tickets vary on the length of the journey and how many trains it will take, however the money will be pre paid for when you use the card to buy the tickets this means that you can easily make impromptu journeys without needing to carry money.</p>
     </div> 
     <div class="parallax-container">
     <div class="parallax"><img src="assets/trainpic5.jpeg"></div>
     </div>   
      <div class="row container">
-         <p class="grey-text text-darken-3 lighten-3">You will need to keep swypecard with you after you have brought your ticket aswell this is important if you plan to take any other train journeys as you can pay for any other transportaion you wish to take.</p>
+         <p class="grey-text text-darken-3 lighten-3">You will need to keep swypecard with you after you have brought your ticket aswell this is important if you plan to take any other train journeys as you can pay for any other transportation you wish to take.</p>
     </div>
     
          <footer class="page-footer">
