--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2017 SwypeCard - Benjamin Gittus
+             2017 SwypeCard - Benjamin Gittus
             </div>
           </div>
         </footer>
