--- a/sign_up.html
+++ b/sign_up.html
@@ -45,12 +45,16 @@
             <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services <i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="booking.html">Book</a></li>
             <li><a href="faq.html">FAQ</a></li>
+            <li><a href="sign_up.html">Sign Up</a></li>
+             <li><a href="log_in.html">Log In</a></li>
       </ul>
          <ul class="side-nav" id="mobile-demo">
              <li><a href="about.html">About</a></li>
              <li><a class = "dropdown-button" href="#" data-activates="dropdown2">Services <i class="material-icons right">arrow_drop_down</i></a></li>
              <li><a href="booking.html">Book</a></li>
              <li><a href="faq.html">FAQ</a></li>
+             <li><a href="sign_up.html">Sign Up</a></li>
+             <li><a href="log_in.html">Log In</a></li>
       </ul>
     </div>
   </nav>
@@ -102,7 +106,7 @@
       <div class="row">
         <div class="input-field col s12">
           <input id="age" type="date" class="validate">
-          <label for="age">Date of Birth</label>
+          
         </div>
       </div>
       <div class="row">
