--- a/booking.html
+++ b/booking.html
@@ -44,12 +44,16 @@
             <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="booking.html">Book</a></li>
             <li><a href="faq.html">FAQ</a></li>
+            <li><a href="sign_up.html">Sign Up</a></li>
+             <li><a href="log_in.html">Log In</a></li>
       </ul>
          <ul class="side-nav" id="mobile-demo">
              <li><a href="about.html">About</a></li>
              <li><a class = "dropdown-button" href="#" data-activates="dropdown2">Services<i class="material-icons right">arrow_drop_down</i></a></li>
              <li><a href="booking.html">Book</a></li>
              <li><a href="faq.html">FAQ</a></li>
+             <li><a href="sign_up.html">Sign Up</a></li>
+             <li><a href="log_in.html">Log In</a></li>
       </ul>
     </div>
   </nav>
@@ -72,20 +76,19 @@
       <div class="row">
        <div class="input-field col s12">
           <input id="name" type="text" class="validate">
-          <label for="password">Name</label>
+          <label for="name">Name</label>
         </div>
         
       </div>
       <div class="row">
          <div class="input-field col s12">
           <input id="address" type="text" class="validate">
-          <label for="password">Address</label>
+          <label for="address">Address</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="age" type="number" class="validate">
-          <label for="password">Date of Birth</label>
+          <input id="age" type="date" class="validate">
         </div>
       </div>
       <div class="row">
@@ -97,7 +100,7 @@
       <div class="row">
       <div class="input-field col s12">
           <input id="phone_number" type="text" class="validate">
-          <label for="password">Phone Number</label>
+          <label for="phone_number">Phone Number</label>
         </div>
       </div>
     </form>
