--- a/bus_services.html
+++ b/bus_services.html
@@ -44,7 +44,7 @@
             <li><a class = "dropdown-button" href="#" data-activates="dropdown1">Services <i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a href="booking.html">Book</a></li>
             <li><a href="faq.html">FAQ</a></li>
-            <li><a href="sign_up.html">Sign Up</a></li>
+            <li><a href="sign_up.php">Sign Up</a></li>
              <li><a href="log_in.html">Log In</a></li>
       </ul>
          <ul class="side-nav" id="mobile-demo">
@@ -52,7 +52,7 @@
              <li><a class = "dropdown-button" href="#" data-activates="dropdown2">Services <i class="material-icons right">arrow_drop_down</i></a></li>
              <li><a href="booking.html">Book</a></li>
              <li><a href="faq.html">FAQ</a></li>
-             <li><a href="sign_up.html">Sign Up</a></li>
+             <li><a href="sign_up.php">Sign Up</a></li>
              <li><a href="log_in.html">Log In</a></li>
       </ul>
     </div>
