--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
             <li><a href="booking.html">Book</a></li>
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="sign_up.php">Sign Up</a></li>
-            <li><a href="log_in.html">Log In</a></li>
+            <li><a href="log_in.php">Log In</a></li>
       </ul>
          <ul class="side-nav" id="mobile-demo">
              <li><a href="about.html">About</a></li>
@@ -53,7 +53,7 @@
              <li><a href="booking.html">Book</a></li>
              <li><a href="faq.html">FAQ</a></li>
              <li><a href="sign_up.php">Sign Up</a></li>
-             <li><a href="log_in.html">Log In</a></li>
+             <li><a href="log_in.php">Log In</a></li>
       </ul>
     </div>
   </nav>
